--- a/sphtech/sphtech/Storyboard/Base.lproj/Main.storyboard
+++ b/sphtech/sphtech/Storyboard/Base.lproj/Main.storyboard
@@ -32,23 +32,23 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecordCollectionViewCell_cellID" id="bN4-4w-ufs" customClass="RecordCollectionViewCell">
-                                        <rect key="frame" x="10" y="10" width="170" height="270"/>
+                                        <rect key="frame" x="12.5" y="10" width="350" height="300"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="170" height="270"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJ6-kd-5jD">
-                                                    <rect key="frame" x="0.0" y="0.0" width="170" height="270"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="350" height="300"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ctH-yy-M9e" userLabel="ImageContainer">
-                                                            <rect key="frame" x="5" y="5" width="160" height="125"/>
+                                                            <rect key="frame" x="5" y="5" width="340" height="166"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wLq-Df-WLW">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="125"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="340" height="125"/>
                                                                 </imageView>
                                                                 <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k07-CF-16N">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="125"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="340" height="166"/>
                                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </button>
                                                             </subviews>
@@ -60,42 +60,42 @@
                                                                 <constraint firstItem="k07-CF-16N" firstAttribute="leading" secondItem="ctH-yy-M9e" secondAttribute="leading" id="WDF-LG-xTa"/>
                                                                 <constraint firstItem="k07-CF-16N" firstAttribute="top" secondItem="ctH-yy-M9e" secondAttribute="top" id="YcA-sg-PVe"/>
                                                                 <constraint firstAttribute="bottom" secondItem="k07-CF-16N" secondAttribute="bottom" id="YhC-bR-mJa"/>
-                                                                <constraint firstAttribute="height" constant="125" id="c1s-jK-8Zy"/>
-                                                                <constraint firstAttribute="bottom" secondItem="wLq-Df-WLW" secondAttribute="bottom" id="iOy-iV-IiG"/>
+                                                                <constraint firstAttribute="height" constant="166" id="c1s-jK-8Zy"/>
+                                                                <constraint firstAttribute="bottom" secondItem="wLq-Df-WLW" secondAttribute="bottom" constant="41" id="iOy-iV-IiG"/>
                                                                 <constraint firstAttribute="trailing" secondItem="wLq-Df-WLW" secondAttribute="trailing" id="nmt-32-OLB"/>
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18.999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JAT-pu-mVE">
-                                                            <rect key="frame" x="8" y="232" width="154" height="18"/>
+                                                            <rect key="frame" x="8" y="263" width="334" height="18"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="18" id="f4c-8n-zHx"/>
+                                                                <constraint firstAttribute="height" constant="18" id="ATV-pr-b0A"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VOLUME OF MOBILE DATA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ok-ew-Z1O">
-                                                            <rect key="frame" x="8" y="214" width="154" height="16"/>
+                                                            <rect key="frame" x="8" y="244" width="334" height="16"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="16" id="TZi-Kx-eJp"/>
+                                                                <constraint firstAttribute="height" constant="16" id="IWR-Xp-xy6"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018-Q2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ntb-Dz-hmQ">
-                                                            <rect key="frame" x="8" y="173" width="154" height="18"/>
+                                                            <rect key="frame" x="8" y="206" width="334" height="18"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="18" id="Qua-dY-Z1j"/>
+                                                                <constraint firstAttribute="height" constant="18" id="u8a-Vv-mAi"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QUARTER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34P-Zk-iZf">
-                                                            <rect key="frame" x="8" y="155" width="154" height="16"/>
+                                                            <rect key="frame" x="8" y="188" width="334" height="16"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="16" id="sKO-f7-fwW"/>
+                                                                <constraint firstAttribute="height" constant="16" id="VaF-jC-8Wd"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
@@ -104,21 +104,21 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstItem="1ok-ew-Z1O" firstAttribute="top" secondItem="Ntb-Dz-hmQ" secondAttribute="bottom" constant="23" id="8yB-H9-U4l"/>
-                                                        <constraint firstItem="1ok-ew-Z1O" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="9Qa-Ff-1jW"/>
-                                                        <constraint firstItem="Ntb-Dz-hmQ" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="CuU-PP-Zvd"/>
+                                                        <constraint firstItem="JAT-pu-mVE" firstAttribute="top" secondItem="1ok-ew-Z1O" secondAttribute="bottom" constant="3" id="9If-fq-RN9"/>
+                                                        <constraint firstAttribute="trailing" secondItem="34P-Zk-iZf" secondAttribute="trailing" constant="8" id="CLL-2e-uiE"/>
                                                         <constraint firstAttribute="trailing" secondItem="ctH-yy-M9e" secondAttribute="trailing" constant="5" id="GfZ-at-8e2"/>
-                                                        <constraint firstItem="Ntb-Dz-hmQ" firstAttribute="top" secondItem="34P-Zk-iZf" secondAttribute="bottom" constant="2" id="GqA-G2-cHB"/>
-                                                        <constraint firstItem="JAT-pu-mVE" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="Kex-o3-ITn"/>
-                                                        <constraint firstItem="JAT-pu-mVE" firstAttribute="top" secondItem="1ok-ew-Z1O" secondAttribute="bottom" constant="2" id="Lqs-6G-OE1"/>
-                                                        <constraint firstItem="34P-Zk-iZf" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="Pjx-n2-Ikf"/>
-                                                        <constraint firstAttribute="trailing" secondItem="JAT-pu-mVE" secondAttribute="trailing" constant="8" id="X91-Kw-i7s"/>
+                                                        <constraint firstItem="34P-Zk-iZf" firstAttribute="top" secondItem="ctH-yy-M9e" secondAttribute="bottom" constant="17" id="HwZ-aV-ep4"/>
+                                                        <constraint firstItem="1ok-ew-Z1O" firstAttribute="top" secondItem="Ntb-Dz-hmQ" secondAttribute="bottom" constant="20" id="MCK-Bv-U4Y"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Ntb-Dz-hmQ" secondAttribute="trailing" constant="8" id="W5J-EO-edu"/>
+                                                        <constraint firstAttribute="trailing" secondItem="1ok-ew-Z1O" secondAttribute="trailing" constant="8" id="ZBV-UI-gh5"/>
+                                                        <constraint firstItem="Ntb-Dz-hmQ" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="aJR-Tn-0PC"/>
+                                                        <constraint firstItem="JAT-pu-mVE" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="bJc-ch-qp6"/>
                                                         <constraint firstItem="ctH-yy-M9e" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="5" id="fFq-DX-VWi"/>
-                                                        <constraint firstItem="34P-Zk-iZf" firstAttribute="top" secondItem="ctH-yy-M9e" secondAttribute="bottom" constant="25" id="kxY-Dq-y7g"/>
+                                                        <constraint firstItem="1ok-ew-Z1O" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="h1o-oW-wWl"/>
+                                                        <constraint firstItem="34P-Zk-iZf" firstAttribute="leading" secondItem="LJ6-kd-5jD" secondAttribute="leading" constant="8" id="h2c-7A-SYv"/>
                                                         <constraint firstItem="ctH-yy-M9e" firstAttribute="top" secondItem="LJ6-kd-5jD" secondAttribute="top" constant="5" id="l7e-Ys-8Co"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Ntb-Dz-hmQ" secondAttribute="trailing" constant="8" id="lYG-j3-t3V"/>
-                                                        <constraint firstAttribute="trailing" secondItem="34P-Zk-iZf" secondAttribute="trailing" constant="8" id="nuG-Ub-bJE"/>
-                                                        <constraint firstAttribute="trailing" secondItem="1ok-ew-Z1O" secondAttribute="trailing" constant="8" id="s5N-jo-Cj8"/>
+                                                        <constraint firstItem="Ntb-Dz-hmQ" firstAttribute="top" secondItem="34P-Zk-iZf" secondAttribute="bottom" constant="2" id="o9S-te-17a"/>
+                                                        <constraint firstAttribute="trailing" secondItem="JAT-pu-mVE" secondAttribute="trailing" constant="8" id="shz-RJ-Gwb"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -129,7 +129,7 @@
                                             <constraint firstAttribute="trailing" secondItem="LJ6-kd-5jD" secondAttribute="trailing" id="TIs-vp-7GS"/>
                                             <constraint firstItem="LJ6-kd-5jD" firstAttribute="leading" secondItem="bN4-4w-ufs" secondAttribute="leading" id="maL-jZ-kbT"/>
                                         </constraints>
-                                        <size key="customSize" width="170" height="270"/>
+                                        <size key="customSize" width="350" height="300"/>
                                         <connections>
                                             <outlet property="image" destination="wLq-Df-WLW" id="Tt6-Qb-zCo"/>
                                             <outlet property="imageContainer" destination="ctH-yy-M9e" id="Ith-hS-aKM"/>
